@@ -46,15 +46,10 @@ sub _userAddOns
         return;
     }
 
-    # If the user does not have a mailbox, do not show
-    my $mail = $user->get('mail');
-    unless (defined $mail and length $mail) {
-        return;
-    }
-
     my $active = $self->enabled($user) ? 1 : 0;
     my $args = {
         user     => $user,
+        hasMail  => $user->get('mail') ? 1 : 0,
         active   => $active,
     };
 
@@ -94,7 +89,7 @@ sub enabled
 
 sub setAccountEnabled
 {
-    my ($self, $ldapUser, $option) = @_;
+    my ($self, $ldapUser, $enabled) = @_;
 
     my $ldbUser = new EBox::Samba::User(samAccountName => $ldapUser->get('uid'));
     unless (defined $ldbUser and $ldbUser->exists()) {
@@ -106,7 +101,7 @@ sub setAccountEnabled
 
     my $cmd = '/opt/samba4/sbin/openchange_newuser ';
     $cmd .= ' --create ' unless (defined $msExchUserAccountControl);
-    if ($option) {
+    if ($enabled) {
         $cmd .= ' --enable ';
     } else {
         $cmd .= ' --disable ';
@@ -132,11 +127,6 @@ sub _addUser
     my $mail = EBox::Global->modInstance('mail');
     my $mailUserModel = $mail->model('MailUser');
     return unless ($mailUserModel->enabledValue());
-
-#    my $sambaModule = EBox::Global->modInstance('samba');
-#    my $adDomain = $sambaModule->getProvision->getADDomain('localhost');
-#    my $vDomain = $mailUserModel->domainValue();
-#    return unless (lc $vDomain eq lc $adDomain);
 
     $self->setAccountEnabled($user, 1);
 }
