@@ -1,4 +1,5 @@
 HEAD
+	+ Better integration with openchange account addon
 	+ Remove openchange account when removing mail account
 3.3.1
 	+ Added openchange outgoing mail rewriting
